# vidgen

./: .gitignore  README.md  USERGUIDE.md  batch_stories.py  batch_zodiac.py  doc.md  err.txt  orchestrator.py  pyproject.toml  requirements.txt  run.ps1  run.sh  run_batch.ps1  run_gui.ps1  run_orchestrator.ps1  test_amix.py  test_edge_tts.py  test_gemini.py  test_genai.py  test_qc.json  test_tts_pipeline.py  test_tts_thread.py
DevTeam/: __main__.py
ProjectManager/: __main__.py
QualityControl/: __main__.py
assets/: story_template.md  story_template.txt  story_template2.md
assets/ref/: best_practices.md  tut1_implementation_plan.md.resolved  tutorial1.md
assets/stories/: From Degree to Generosity.md  the_quiet_equation.md
doc/: GUI with SolidJS.md  webui-implementation.md
schemas/: __init__.py  artifact_manifest.py  dev_change_proposal.py  generation_plan.py  qc_report.py  requirement_spec.py
stories/zodiac-stories/: 01-rat.md  02-ox.md  03-tiger.md  04-rabbit.md  05-dragon.md  06-snake.md  07-horse.md  08-goat.md  09-monkey.md  10-rooster.md  11-dog.md  12-pig.md
tests/: test_schemas.py  test_utils.py
utils/: __init__.py  ffprobe_utils.py  git_utils.py  hf_client.py  run_utils.py
vidgen/: __init__.py  batchutil.py  compiler.py  config.py  imagegen.py  main.py  musicgen.py  musicgen_ai.py  pipeline.py  scriptgen.py  story_agent.py  ttsgen.py  ttsgen_ai.py  tui.py  videogen.py
vidgen/utils/: gemini_client.py
webui/: requirements-webui.txt  start.py
webui/backend/: app.py  job_manager.py  models.py
webui/frontend/: index.html  package-lock.json  (+3 more)
(+14 files in other folders)
